tests/ui/abi/abi-typo-unstable.stderr
error[E0703]: invalid ABI: found `crablang-intrinsec`
  --> $DIR/abi-typo-unstable.rs:2:8
   |
LL | extern "crablang-intrinsec" fn crablang_intrinsic() {}
   |        ^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `crablangc --print=calling-conventions` for a full list of supported calling conventions.

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0703`.
